# scout-off-contracts

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md  ai.md  rust-toolchain.toml
.github/: CODEOWNERS
contracts/progress/: Cargo.toml
contracts/progress/src/: errors.rs  events.rs  lib.rs  types.rs
contracts/progress/test_snapshots/tests/: test_advance_level_history_counter_overflow.1.json  test_advance_level_succeeds_when_verification_contract_set.1.json  test_advance_level_unauthorized_when_verification_contract_set.1.json  test_advance_level_without_verification_contract.1.json  test_cannot_exceed_elite_tier.1.json  test_double_initialize_does_not_extend_ttl.1.json  test_fourth_advance_panics.1.json  test_full_level_progression_with_history.1.json  test_get_history_entry_correct_data.1.json  test_get_progress_history_page.1.json  test_get_progress_history_three_entries.1.json  test_old_admin_loses_access_after_transfer.1.json  test_pause_and_unpause.1.json  test_progress_updated_event_data.1.json  test_reset_player_level_success.1.json  test_reset_player_level_unauthorized.1.json  test_transfer_admin_success.1.json  test_transfer_admin_unauthorized.1.json  test_two_players_advance_independently.1.json
contracts/registration/: Cargo.toml
contracts/registration/src/: errors.rs  events.rs  lib.rs  types.rs
contracts/registration/test_snapshots/tests/: test_admin_can_verify_scout.1.json  test_filter_players_by_region_and_position.1.json  test_full_milestone_approval_flow_integration.1.json  test_full_player_registration_and_update_flow.1.json  test_get_player_count_after_registrations.1.json  test_get_player_summary_excludes_ipfs_hashes.1.json  test_get_players_batch_fetch.1.json  test_get_players_max_batch_size_ok.1.json  test_get_players_partial_hits.1.json  test_get_scout_count_after_registrations.1.json  test_initialize_and_health.1.json  test_newly_registered_scout_not_verified.1.json  test_register_player.1.json  test_register_player_nationality_too_long.1.json  test_register_player_position_max_len_ok.1.json  test_register_player_region_too_long.1.json  test_register_scout_region_128_bytes_succeeds.1.json  test_register_scout_region_max_len_ok.1.json  test_same_wallet_can_register_as_player_and_scout.1.json  test_update_profile_too_many_hashes_fails.1.json  test_update_profile_valid_hashes_persisted.1.json
contracts/scout_access/: Cargo.toml  TEST_UPDATE_FEE_CONFIG_EVENT.md
contracts/scout_access/src/: errors.rs  events.rs  lib.rs  types.rs
contracts/scout_access/test_snapshots/tests/: test_contact_without_subscription_fails.1.json  test_downgrade_elite_to_basic_before_expiry_returns_error.1.json  (+38 more)
contracts/scout_access/tests/: integration_trial_offer_flow.rs
(+66 files in other folders)
