[workspace]
members = [
    "contracts/registration",
    "contracts/verification",
    "contracts/progress",
    "contracts/scout_access",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "25.3.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[patch.crates-io]
hashbrown = { git = 'https://github.com/rust-lang/hashbrown.git', tag = 'v0.14.5' }
