[workspace]
members = [
    "contracts/shared-types",
    "contracts/registration",
    "contracts/verification",
    "contracts/progress",
    "contracts/scout_access",
]
resolver = "2"

[workspace.package]
# When bumping this version, also update docs/VERSIONING.md Version History.
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
soroban-sdk = { version = "25.3.1" }
soroban-sdk-testutils = { version = "25.3.1", package = "soroban-sdk", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[patch.crates-io]
hashbrown = { git = 'https://github.com/rust-lang/hashbrown.git', tag = 'v0.14.5' }
