[package]
name = "scoutchain-progress"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
scoutchain-shared-types = { path = "../shared-types" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
scoutchain-verification = { path = "../verification" }
